不要なノードを削除した